--- a/static/partials/editor.html
+++ b/static/partials/editor.html
@@ -16,7 +16,7 @@
         <div id="right-side" class="relative-content">
             <div id="explorer" ng-class="{hidden: toc.lessons[lessonId].Pages[curPage-1].Files.length==0}">
                 <a class="menu-button" ng-repeat="f in toc.lessons[lessonId].Pages[curPage-1].Files" ng-click="openFile($index)" ng-class="{active: $index==curFile}">{{f.Name}}</a>
-                <a syntax-checkbox ng-class="{active: editor.syntax}" class="menu-button syntax-checkbox">Syntax</a>
+                <a syntax-checkbox ng-class="{active: editor.syntax}" class="menu-button syntax-checkbox">Sintaxi</a>
                 <a imports-checkbox ng-class="{active: editor.imports}" class="menu-button imports-checkbox">Imports</a>
             </div>
 
@@ -36,10 +36,10 @@
                     <div class="relative-content">
                         <!--div id="file-menu" ng-controller="OutputCtrl"-->
                         <div id="file-menu">
-                            <a ng-show="job == null" class="menu-button" id="run" ng-click="run()">Run</a>
-                            <a ng-show="job != null" class="menu-button" id="kill" ng-click="kill()">Kill</a>
-                            <a class="menu-button" id="format" ng-click="format()">Format</a>
-                            <a class="menu-button" id="reset" ng-click="reset()">Reset</a>
+                            <a ng-show="job == null" class="menu-button" id="run" ng-click="run()">Executar</a>
+                            <a ng-show="job != null" class="menu-button" id="kill" ng-click="kill()">Abortar</a>
+                            <a class="menu-button" id="format" ng-click="format()">Donar format</a>
+                            <a class="menu-button" id="reset" ng-click="reset()">Restaurar</a>
                         </div>
 
                         <div class="output" ng-repeat="f in toc.lessons[lessonId].Pages[curPage-1].Files" ng-class="{active: $index==curFile}" ng-bind-html-unsafe="f.Output">
